k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-app
  namespace: dev
  labels:
    app: playground
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: playground
  template:
    metadata:
      labels:
        app: playground
        version: v1
    spec:
      containers:
      - name: playground
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
        # env:
        # - name: VERSION
        #   value: "v1"
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 8888
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 8888
        #   initialDelaySeconds: 5
        #   periodSeconds: 5
