k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground-service
  namespace: dev
  labels:
    app: playground
spec:
  selector:
    app: playground
  ports:
  - port: 80
    targetPort: 8888
    protocol: TCP
    name: http
  type: LoadBalancer
